Fix logo clipping

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,7 @@
 
   svg {
     height: 76px;
-    padding: 8px 0;
+    padding: 8px 1px;
     vertical-align: middle;
 
     &:hover {
